src/antlr/Portugues2Parser.java
// Generated from Portugues2.g4 by ANTLR 4.10.1

    package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Portugues2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, TEXTO=38, 
		COMENTARIO=39, ID=40, NUM=41, LETRA=42, DIGITO=43, WS=44, ErrorChar=45;
	public static final int
		RULE_programa = 0, RULE_declaracoes = 1, RULE_identificacao = 2, RULE_codigo = 3, 
		RULE_comando = 4, RULE_expressaoarit = 5, RULE_expressaobool = 6, RULE_atribuicao = 7, 
		RULE_entradasaida = 8, RULE_expressaocondicional = 9, RULE_expressaorepeticao = 10, 
		RULE_vouf = 11, RULE_cod = 12, RULE_dec = 13, RULE_tipo = 14, RULE_v = 15, 
		RULE_f = 16, RULE_atr = 17, RULE_ap = 18, RULE_fp = 19, RULE_ac = 20, 
		RULE_fc = 21, RULE_pev = 22, RULE_op_arit = 23, RULE_op_rel = 24, RULE_op_bol = 25, 
		RULE_cond = 26, RULE_condsenao = 27, RULE_rep = 28, RULE_ler = 29, RULE_escrever = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracoes", "identificacao", "codigo", "comando", "expressaoarit", 
			"expressaobool", "atribuicao", "entradasaida", "expressaocondicional", 
			"expressaorepeticao", "vouf", "cod", "dec", "tipo", "v", "f", "atr", 
			"ap", "fp", "ac", "fc", "pev", "op_arit", "op_rel", "op_bol", "cond", 
			"condsenao", "rep", "ler", "escrever"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'CODIGO'", "'DECLARACOES'", "'int'", "'flutuante'", "'texto'", 
			"'vouf'", "'v'", "'f'", "'=D'", "'('", "')'", "'{'", "'}'", "';'", "'+'", 
			"'-'", "'*'", "'/'", "'//'", "'%'", "'=='", "'<'", "'>'", "'<='", "'>='", 
			"'!='", "'e'", "'ou'", "'xou'", "'nao'", "'se'", "'senao se'", "'senao'", 
			"'para'", "'enquanto'", "'RECEBA'", "'TOMI'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "TEXTO", "COMENTARIO", "ID", "NUM", "LETRA", "DIGITO", "WS", 
			"ErrorChar"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Portugues2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Portugues2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	 
		public ProgramaContext() { }
		public void copyFrom(ProgramaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NProgramaContext extends ProgramaContext {
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public List<CodigoContext> codigo() {
			return getRuleContexts(CodigoContext.class);
		}
		public CodigoContext codigo(int i) {
			return getRuleContext(CodigoContext.class,i);
		}
		public NProgramaContext(ProgramaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).enterNPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).exitNPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Portugues2Visitor ) return ((Portugues2Visitor<? extends T>)visitor).visitNPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			_localctx = new NProgramaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			declaracoes();
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(63);
				codigo();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracoesContext extends ParserRuleContext {
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
	 
		public DeclaracoesContext() { }
		public void copyFrom(DeclaracoesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NDeclaracoesContext extends DeclaracoesContext {
		public DecContext dec() {
			return getRuleContext(DecContext.class,0);
		}
		public List<IdentificacaoContext> identificacao() {
			return getRuleContexts(IdentificacaoContext.class);
		}
		public IdentificacaoContext identificacao(int i) {
			return getRuleContext(IdentificacaoContext.class,i);
		}
		public NDeclaracoesContext(DeclaracoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).enterNDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).exitNDeclaracoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Portugues2Visitor ) return ((Portugues2Visitor<? extends T>)visitor).visitNDeclaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracoes);
		int _la;
		try {
			_localctx = new NDeclaracoesContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			dec();
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5))) != 0)) {
				{
				{
				setState(70);
				identificacao();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentificacaoContext extends ParserRuleContext {
		public IdentificacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identificacao; }
	 
		public IdentificacaoContext() { }
		public void copyFrom(IdentificacaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NIdentificacaoContext extends IdentificacaoContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(Portugues2Parser.ID, 0); }
		public PevContext pev() {
			return getRuleContext(PevContext.class,0);
		}
		public NIdentificacaoContext(IdentificacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).enterNIdentificacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).exitNIdentificacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Portugues2Visitor ) return ((Portugues2Visitor<? extends T>)visitor).visitNIdentificacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentificacaoContext identificacao() throws RecognitionException {
		IdentificacaoContext _localctx = new IdentificacaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identificacao);
		try {
			_localctx = new NIdentificacaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			tipo();
			setState(77);
			match(ID);
			setState(78);
			pev();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodigoContext extends ParserRuleContext {
		public CodigoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codigo; }
	 
		public CodigoContext() { }
		public void copyFrom(CodigoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NCodigoContext extends CodigoContext {
		public CodContext cod() {
			return getRuleContext(CodContext.class,0);
		}
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public NCodigoContext(CodigoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).enterNCodigo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).exitNCodigo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Portugues2Visitor ) return ((Portugues2Visitor<? extends T>)visitor).visitNCodigo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodigoContext codigo() throws RecognitionException {
		CodigoContext _localctx = new CodigoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_codigo);
		int _la;
		try {
			_localctx = new NCodigoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			cod();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << TEXTO) | (1L << ID) | (1L << NUM))) != 0)) {
				{
				{
				setState(81);
				comando();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandoContext extends ParserRuleContext {
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
	 
		public ComandoContext() { }
		public void copyFrom(ComandoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NComandoContext extends ComandoContext {
		public PevContext pev() {
			return getRuleContext(PevContext.class,0);
		}
		public EntradasaidaContext entradasaida() {
			return getRuleContext(EntradasaidaContext.class,0);
		}
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public ExpressaocondicionalContext expressaocondicional() {
			return getRuleContext(ExpressaocondicionalContext.class,0);
		}
		public ExpressaorepeticaoContext expressaorepeticao() {
			return getRuleContext(ExpressaorepeticaoContext.class,0);
		}
		public NComandoContext(ComandoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).enterNComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).exitNComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Portugues2Visitor ) return ((Portugues2Visitor<? extends T>)visitor).visitNComando(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comando);
		try {
			_localctx = new NComandoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
			case T__7:
			case T__35:
			case T__36:
			case TEXTO:
			case ID:
			case NUM:
				{
				setState(89);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__35:
				case T__36:
					{
					setState(87);
					entradasaida();
					}
					break;
				case T__6:
				case T__7:
				case TEXTO:
				case ID:
				case NUM:
					{
					setState(88);
					atribuicao();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(91);
				pev();
				}
				break;
			case T__30:
			case T__31:
			case T__32:
			case T__33:
			case T__34:
				{
				setState(95);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__30:
				case T__31:
				case T__32:
					{
					setState(93);
					expressaocondicional();
					}
					break;
				case T__33:
				case T__34:
					{
					setState(94);
					expressaorepeticao();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoaritContext extends ParserRuleContext {
		public ExpressaoaritContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoarit; }
	 
		public ExpressaoaritContext() { }
		public void copyFrom(ExpressaoaritContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NExpressaoAritContext extends ExpressaoaritContext {
		public Op_aritContext op_arit() {
			return getRuleContext(Op_aritContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(Portugues2Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(Portugues2Parser.ID, i);
		}
		public List<TerminalNode> NUM() { return getTokens(Portugues2Parser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(Portugues2Parser.NUM, i);
		}
		public NExpressaoAritContext(ExpressaoaritContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).enterNExpressaoArit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).exitNExpressaoArit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Portugues2Visitor ) return ((Portugues2Visitor<? extends T>)visitor).visitNExpressaoArit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressaoaritContext expressaoarit() throws RecognitionException {
		ExpressaoaritContext _localctx = new ExpressaoaritContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expressaoarit);
		int _la;
		try {
			_localctx = new NExpressaoAritContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(99);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==NUM) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(100);
			op_arit();
			setState(101);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==NUM) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoboolContext extends ParserRuleContext {
		public ExpressaoboolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaobool; }
	 
		public ExpressaoboolContext() { }
		public void copyFrom(ExpressaoboolContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NExpressaoBoolContext extends ExpressaoboolContext {
		public Op_relContext op_rel() {
			return getRuleContext(Op_relContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(Portugues2Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(Portugues2Parser.ID, i);
		}
		public List<VoufContext> vouf() {
			return getRuleContexts(VoufContext.class);
		}
		public VoufContext vouf(int i) {
			return getRuleContext(VoufContext.class,i);
		}
		public List<ExpressaoaritContext> expressaoarit() {
			return getRuleContexts(ExpressaoaritContext.class);
		}
		public ExpressaoaritContext expressaoarit(int i) {
			return getRuleContext(ExpressaoaritContext.class,i);
		}
		public List<TerminalNode> NUM() { return getTokens(Portugues2Parser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(Portugues2Parser.NUM, i);
		}
		public NExpressaoBoolContext(ExpressaoboolContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).enterNExpressaoBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).exitNExpressaoBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Portugues2Visitor ) return ((Portugues2Visitor<? extends T>)visitor).visitNExpressaoBool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressaoboolContext expressaobool() throws RecognitionException {
		ExpressaoboolContext _localctx = new ExpressaoboolContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expressaobool);
		try {
			_localctx = new NExpressaoBoolContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(105);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(103);
					match(ID);
					}
					break;
				case T__6:
				case T__7:
					{
					setState(104);
					vouf();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				{
				setState(111);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(107);
					match(ID);
					}
					break;
				case 2:
					{
					setState(108);
					expressaoarit();
					}
					break;
				case 3:
					{
					setState(109);
					vouf();
					}
					break;
				case 4:
					{
					setState(110);
					match(NUM);
					}
					break;
				}
				setState(113);
				op_rel();
				setState(118);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(114);
					match(ID);
					}
					break;
				case 2:
					{
					setState(115);
					expressaoarit();
					}
					break;
				case 3:
					{
					setState(116);
					vouf();
					}
					break;
				case 4:
					{
					setState(117);
					match(NUM);
					}
					break;
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtribuicaoContext extends ParserRuleContext {
		public AtribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicao; }
	 
		public AtribuicaoContext() { }
		public void copyFrom(AtribuicaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NAtribuicaoContext extends AtribuicaoContext {
		public AtrContext atr() {
			return getRuleContext(AtrContext.class,0);
		}
		public TerminalNode ID() { return getToken(Portugues2Parser.ID, 0); }
		public TerminalNode NUM() { return getToken(Portugues2Parser.NUM, 0); }
		public TerminalNode TEXTO() { return getToken(Portugues2Parser.TEXTO, 0); }
		public ExpressaoaritContext expressaoarit() {
			return getRuleContext(ExpressaoaritContext.class,0);
		}
		public ExpressaoboolContext expressaobool() {
			return getRuleContext(ExpressaoboolContext.class,0);
		}
		public VContext v() {
			return getRuleContext(VContext.class,0);
		}
		public FContext f() {
			return getRuleContext(FContext.class,0);
		}
		public NAtribuicaoContext(AtribuicaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).enterNAtribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).exitNAtribuicao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Portugues2Visitor ) return ((Portugues2Visitor<? extends T>)visitor).visitNAtribuicao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtribuicaoContext atribuicao() throws RecognitionException {
		AtribuicaoContext _localctx = new AtribuicaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_atribuicao);
		try {
			_localctx = new NAtribuicaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(122);
				match(NUM);
				}
				break;
			case 2:
				{
				setState(123);
				match(TEXTO);
				}
				break;
			case 3:
				{
				setState(124);
				expressaoarit();
				}
				break;
			case 4:
				{
				setState(125);
				expressaobool();
				}
				break;
			case 5:
				{
				setState(126);
				v();
				}
				break;
			case 6:
				{
				setState(127);
				f();
				}
				break;
			}
			setState(130);
			atr();
			setState(131);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntradasaidaContext extends ParserRuleContext {
		public EntradasaidaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entradasaida; }
	 
		public EntradasaidaContext() { }
		public void copyFrom(EntradasaidaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NEntradaSaidaContext extends EntradasaidaContext {
		public LerContext ler() {
			return getRuleContext(LerContext.class,0);
		}
		public EscreverContext escrever() {
			return getRuleContext(EscreverContext.class,0);
		}
		public TerminalNode ID() { return getToken(Portugues2Parser.ID, 0); }
		public TerminalNode NUM() { return getToken(Portugues2Parser.NUM, 0); }
		public TerminalNode TEXTO() { return getToken(Portugues2Parser.TEXTO, 0); }
		public ExpressaoaritContext expressaoarit() {
			return getRuleContext(ExpressaoaritContext.class,0);
		}
		public ExpressaoboolContext expressaobool() {
			return getRuleContext(ExpressaoboolContext.class,0);
		}
		public NEntradaSaidaContext(EntradasaidaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).enterNEntradaSaida(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Portugues2Listener ) ((Portugues2Listener)listener).exitNEntradaSaida(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Portugues2Visitor ) return ((Portugues2Visitor<? extends T>)visitor).visitNEntradaSaida(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntradasaidaContext entradasaida() throws RecognitionException {
		EntradasaidaContext _localctx = new EntradasaidaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_entradasaida);
		try {
			_localctx = new NEntradaSaidaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__35:
				{
				setState(133);
				ler();
				}
				break;
			case T__36:
				{
				setState(134);
				escrever();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(142);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(137);
				match(ID);
				}
				break;
			case 2:
				{
				setState(138);
				match(NUM);
				}
				break;
			case 3:
				{
				setState(139);
				match(TEXTO);
				}
				break;
			case 4:
				{
				setState(140);
				expressaoarit();
				}
				break;
			case 5:
				{
				setState(141);
				expressaobool();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
